--- a/app/globals.css
+++ b/app/globals.css
@@ -32,3 +32,50 @@ body {
 ::-webkit-scrollbar-button {
     display: none;
 }
+
+
+.bouncer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 130px;
+    width: 130px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.bouncer div {
+    height: 25px;
+    width: 25px;
+    background-color: black;
+    border-radius: 50%;
+    animation: bounce 0.5s cubic-bezier(.19, .57, .3, .98) infinite alternate;
+}
+
+.bouncer div:nth-child(2) {
+    animation-delay: 0.1s;
+    /* opacity: 0.9; */
+}
+
+.bouncer div:nth-child(3) {
+    animation-delay: 0.2s;
+    /* opacity: 0.8; */
+}
+
+.bouncer div:nth-child(4) {
+    animation-delay: 0.3s;
+    /* opacity: 0.7; */
+}
+
+
+@keyframes bounce {
+    from {
+        transform: translateY(0)
+    }
+
+    to {
+        transform: translateY(-100px)
+    }
+}
